Geometry Nodes: tilt still ignored on resampled curve offset by normal #92511

Closed
opened 2021-10-26 22:09:41 +02:00 by Martijn Versteegh · 4 comments

System Information
Operating system: Linux-5.4.0-89-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.74

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-26 19:01, hash: 0cf9794c7e
Worked: N/A

Short description of error
While 319de793d798 partially fixes #92508 there's still something strange going on.

The combination of a resample-curve node with normals as input to set position still leads to curve-to-mesh ignoring the tilt.

Exact steps for others to reproduce the error
Open the attached .blend
test-curve-normal-add-tilt.blend

  • drag the tilt value in the curve-set-tilt node and observe the mesh doesn't tilt, while the tilt values shown in the spreadsheet do change.
  • mute the normal input, or replace it with the index input or mute the resample-curve node (only one of these things is enough) and drag the tilt again -> observe the mesh now tilts.
**System Information** Operating system: Linux-5.4.0-89-generic-x86_64-with-glibc2.31 64 Bits Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.74 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-26 19:01, hash: `0cf9794c7e` Worked: N/A **Short description of error** While [319de793d798 ](https://developer.blender.org/rB319de793d79865603b3cdccec5933d2152e43bb3) partially fixes #92508 there's still something strange going on. The combination of a resample-curve node with normals as input to set position still leads to curve-to-mesh ignoring the tilt. **Exact steps for others to reproduce the error** Open the attached .blend [test-curve-normal-add-tilt.blend](https://archive.blender.org/developer/F11528138/test-curve-normal-add-tilt.blend) - drag the tilt value in the curve-set-tilt node and observe the mesh doesn't tilt, while the tilt values shown in the spreadsheet do change. - mute the normal input, or replace it with the index input or mute the resample-curve node (only one of these things is enough) and drag the tilt again -> observe the mesh now tilts.
Author
Member

Added subscriber: @Baardaap

Added subscriber: @Baardaap
Author
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke

This issue was referenced by 8b15b06b20

This issue was referenced by 8b15b06b201169b9f1e2eb6604711ff2fe1abdab
Member

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Jacques Lucke self-assigned this 2021-10-27 11:03:07 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92511
No description provided.