Fix: missing cache invalidation when there is only one spline

This fixes T92511, but there is still the more general problem
described in T92508.